# CROSS_EXCHANGE_MARKET_MAKING_LIGHTER_ASTER

./: .gitignore  AGENTS.md  README.md  combined_pnl.py  orchestrator.py  trade_history.py
LIGHTER_ASTER_TAKER_ARB/: .gitignore  AGENTS.md  Cargo.toml  README.md  orchestrator.py
LIGHTER_ASTER_TAKER_ARB/configs/: live-hype.toml
LIGHTER_ASTER_TAKER_ARB/src/: arb.rs  book.rs  book_sanity.rs  cli.rs  config.rs  decimal.rs  entry_gate.rs  main.rs  markets.rs  pnl.rs  status.rs  types.rs
LIGHTER_ASTER_TAKER_ARB/src/aster/: creds.rs  crypto.rs  mod.rs  rest.rs  sign.rs  ws.rs
LIGHTER_ASTER_TAKER_ARB/src/connectors/: mod.rs  rest_book.rs  rest_specs.rs
LIGHTER_ASTER_TAKER_ARB/src/lighter/: local_book.rs  messages.rs  mod.rs  nonce.rs  rest.rs  signer.rs  tx_ws.rs  ws.rs
LIGHTER_ASTER_TAKER_ARB/src/venues/: lighter.rs  mod.rs
XEMM_LIGHTER_ASTER/: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DOCKER_DEPLOY.md  Dockerfile  LIVE_RUNBOOK.md  config-live-lighter-smoke.toml  config-live-lighter.toml  config-paper-lighter.toml  docker-compose.yml
XEMM_LIGHTER_ASTER/scripts/: aster_probe.py  check_hedged_trade.py  deploy_vps.sh  reset_breaker.py
XEMM_LIGHTER_ASTER/src/: book.rs  cli.rs  config.rs  decimal.rs  edge.rs  events.rs  fill_sweep.rs  hedge.rs  hot_types.rs  inventory.rs  lib.rs  live_report.rs  main.rs  markets.rs  metrics.rs  position.rs  quote_engine.rs  record.rs  replay.rs  report.rs  requoter.rs  types.rs  verify.rs  verify_db.rs  vwap.rs
XEMM_LIGHTER_ASTER/src/connectors/: aster.rs  lighter.rs  mod.rs  rest_book.rs  rest_specs.rs
XEMM_LIGHTER_ASTER/src/hotpath/: book_cell.rs  book_check.rs  clock.rs  dirty.rs  mod.rs  registry.rs  venue_thread.rs  watchdog.rs
XEMM_LIGHTER_ASTER/src/hotpath/exec/: live_stub.rs  mod.rs  traits.rs
XEMM_LIGHTER_ASTER/src/lighter/: local_book.rs  messages.rs  rest.rs  signer.rs  tx_ws.rs  ws.rs
XEMM_LIGHTER_ASTER/src/livebot/: account.rs  breaker.rs  fills.rs  ids.rs  journal.rs  mod.rs  orders.rs  pairs.rs  precheck.rs  probe.rs  reconcile.rs  risk.rs  run.rs  scale.rs  status.rs  strategy.rs  userstream.rs
XEMM_LIGHTER_ASTER/src/livebot/exec/: aster.rs  command.rs  creds.rs  crypto.rs  hyperliquid.rs  mod.rs  paper.rs  sign.rs
XEMM_LIGHTER_ASTER/src/sim/: clock.rs  engine.rs  mod.rs
XEMM_LIGHTER_ASTER/src/store/: db.rs  mod.rs  schema.rs
tests/: test_combined_pnl.py  test_extract_json.py  test_orchestrator_baseline.py  test_orchestrator_event.py  test_orchestrator_misc.py  test_orchestrator_wave1.py  test_orchestrator_wave3.py  test_tape_prune.py  test_trade_history.py
