[package]
name = "lighter_aster_taker_arb"
version = "0.1.0"
edition = "2021"
rust-version = "1.87"
default-run = "lighter_aster_taker_arb"
description = "Standalone Lighter/Aster taker-taker arbitrage bot"

[[bin]]
name = "lighter_aster_taker_arb"
path = "src/main.rs"

[dependencies]
anyhow = "1"
arrayvec = "0.7"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4", features = ["derive"] }
csv = "1.3"
fast-float = "0.2"
futures-util = "0.3"
hex = "0.4"
k256 = { version = "0.13", features = ["ecdsa"] }
libc = "0.2"
libloading = "0.8"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
rmp-serde = "1"
rust_decimal = { version = "1", features = ["serde-str"] }
rust_decimal_macros = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
thiserror = "1"
tiny-keccak = { version = "2", features = ["keccak"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = "thin"
